--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main5Activity"></activity>
+        <activity android:name=".Recycler"/>
+
+        <activity android:name=".Main5Activity" />
         <activity android:name=".first_Activity" />
         <activity android:name=".Main3Activity" />
         <activity android:name=".Main2Activity" />
         <activity android:name=".DisplayMessageActivity" />
-        <activity android:name=".MainActivity">
+
+            <activity android:name=".splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
