--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Mari"></activity>
+        <activity android:name=".service"></activity>
+        <activity android:name=".Mari" />
         <activity android:name=".Memory" />
+
 
         <receiver
             android:name=".MyBroadCastReceiver"
